--- a/src/main/resources/assets/ragnarokmod/lang/en_us.json
+++ b/src/main/resources/assets/ragnarokmod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.ragnarokmod.mithril": "Mithril"
+  "item.ragnarokmod.mithril": "Mithril",
+  "item.ragnarokmod.raw_mithril": "Raw Mithril"
 }
