add rawsaphire and tabs

--- a/src/main/resources/assets/ragnarokmod/lang/en_us.json
+++ b/src/main/resources/assets/ragnarokmod/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.ragnarokmod.mithril": "Mithril",
-  "item.ragnarokmod.raw_mithril": "Raw Mithril"
+  "item.ragnarokmod.raw_mithril": "Raw Mithril",
+
+  "creativetab.ragnarok_tab": "Ragnarok Creative Tab"
 }
