Block state in assets

--- a/src/main/resources/assets/ragnarokmod/lang/en_us.json
+++ b/src/main/resources/assets/ragnarokmod/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "item.ragnarokmod.mithril": "Mithril",
+  "item.ragnarokmod.mithril_ingot": "Mithril Ingot",
   "item.ragnarokmod.raw_mithril": "Raw Mithril",
 
   "creativetab.ragnarok_tab": "Ragnarok Creative Tab"
