mithril ore and mineables tab

--- a/src/main/resources/assets/ragnarokmod/lang/en_us.json
+++ b/src/main/resources/assets/ragnarokmod/lang/en_us.json
@@ -12,6 +12,7 @@
   "item.ragnarokmod.mystic_meat": "Mystic Meat",
 
   "block.ragnarokmod.mithril_block": "Block of Mithril",
+  "block.ragnarokmod.mithril_ore": "Mithril Ore",
   "block.ragnarokmod.raw_mithril_block": "Block of Raw Mithril",
 
   "creativetab.ragnarok_tab": "Ragnarok Creative Tab"
